--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,46 @@
 <div class="container">
-  <div class="row">
-
-    @if (items.length !== 0) {
-      <ul class="wish-list">
-        @for (item of items; track item.wishId; let idx = $index) {
-          <li>
-            <div class="form-check">
-                <label class="form-ckeck-label">
-                  <input 
-                    type="checkbox" 
-                    class="checkbox"
-                    [checked] = "item.isComplete"
-                    [attr.data-index] = idx
-                  >{{item.wishText}}
-                </label>
-            </div>
-          </li>
-        }
-      </ul>
-    }@else {
-      <p>No items in the cart.</p>
-    }
+  <form class="row mt-3 gx-3 gy-2 align-items-center justify-content-center">
+    <div class="col-sm-6">
+      <label for="input" class="visually-hidden">Wish</label>
+       <input type="text" name="new-wish-text" class="form-control" [(ngModel)]="newWishText"> 
+    </div>
+    <div class="col-auto">
+      <button 
+        type="submit" 
+        class="btn btn-secondary"
+        (click)="$event.preventDefault(); addNewWish();"
+      >Add wish
+      </button>
+    </div>
+  </form>
+  <div class="row mt-3">
+    <div class="col-sm-2">
+      <select [(ngModel)]="listFilter" (ngModelChange)="filterChanged($event)" class="form-select">
+        <option value="0">All</option>
+        <option value="1">Unfulfilled</option>
+        <option value="2">Fulfiled</option>
+      </select>
+    </div>
   </div>
+  @if (visibleItems.length !== 0) {
+    <ul class="wish-list">
+      @for (item of visibleItems; track item.wishId; let idx = $index) {
+        <li>
+          <div class="form-check">
+              <label class="form-ckeck-label">
+                <input 
+                  type="checkbox" 
+                  class="checkbox"
+                  [checked] = "item.isComplete"
+                  [attr.data-index] = idx
+                  (click)="toggleItem(item)"
+                >{{item.wishText}}
+              </label>
+          </div>
+        </li>
+      }
+    </ul>
+  }@else {
+    <p>No items in the cart.</p>
+  }
 </div>
